Update homepage to donatemus.online with /donatemus basename

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "webprice",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://giftmenna.github.io/donatemus/",
+  "homepage": "https://donatemus.online/donatemus",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
