Updated multiple components: green To Participate button in ETHGiveaway.js, QR code fixes, and other changes

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "webprice",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://donatemus.online/donatemus",
+  "homepage": "https://donatemus.online",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
@@ -13,6 +13,7 @@
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.8.3",
+    "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.3.0",
@@ -46,6 +47,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.0.0"
+    "gh-pages": "^6.3.0"
   }
 }
